Add swagger doc by maven package

--- a/ratingapp/src/main/resources/application.properties
+++ b/ratingapp/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Disabling the /v3/api-docs endpoint
+springdoc.api-docs.enabled=true
+
+# Disabling the swagger-ui
+springdoc.swagger-ui.enabled=true
